OUT Of Focus Modal

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -493,6 +493,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                   
             }
         });
+        $('#EventsModal').focusout(function(){
+            selectEvents();
+          });
       });
       </script>
       
