--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -185,7 +185,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                             <label><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS"/>WORKSHOP SESSIONS</label><br>
                                                             <label><input type="checkbox" class="event_checks" value=100 name="FEEL THE BEAT-DANCE COMPETITION (SOLO)"/>FEEL THE BEAT-DANCE COMPETITION (SOLO)</label><br>
                                                             <label><input type="checkbox" class="event_checks" value=500 name="FEEL THE BEAT-DANCE COMPETITION (GROUP)"/>FEEL THE BEAT-DANCE COMPETITION (GROUP)</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="SCHOOL OF ROCK - BATTLE OF BANDS"/>SCHOOL OF ROCK - BATTLE OF BANDS</label><br>
+                                                        <!--<label><input type="checkbox" class="event_checks" value=50 name="SCHOOL OF ROCK - BATTLE OF BANDS"/>SCHOOL OF ROCK - BATTLE OF BANDS</label><br> -->
                                                             <label><input type="checkbox" class="event_checks" value=200 name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW</label><br>
                                                             <label><input type="checkbox" class="event_checks" value=50 name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION</label><br>
                                                             <label><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>
@@ -284,20 +284,79 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                             <!-- END -->
                           </div>
                           <div class="col-md-4 order-md-2">
-                              <h4 class="d-flex justify-content-between mb-3"> <span class="text-muted"><b>Readme !!</b></span><span class="badge badge-secondary badge-pill">3</span> </h4>
+                              <h4 class="d-flex justify-content-between mb-3"> <span class="text-muted"><b>Readme !!</b></span><span class="badge badge-secondary badge-pill">17</span> </h4>
                               <ul class="list-group">
                               <div>
                                 <li class="list-group-item d-flex align-items-end justify-content-between">
-                                    <h6 class="my-0"><b>Event Rules</b></h6>
+                                    <h6 class="my-0"><b>Events</b></h6><span class="text-muted">Price</span>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
-                                    <h6 class="my-0"><b>Please present Yourself before start of every Event (Competition)</b></h6> <small class="text-muted">Brief description</small> </div>
-                                    <span class="text-muted">Important</span> </li>
+                                    <h6 class="my-0"><b>Quizical</b></h6> <small class="text-muted">An IT Quiz Competition</small></div>
+                                     <span class="text-muted">50 Rs</span> </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
-                                    <h6 class="my-0"><b>Rule 2</b></h6> <small class="text-muted">Brief description</small> </div>
-                                    <span class="text-muted">Important</span> </li>
-                                <li class="list-group-item d-flex justify-content-between"> <span>Last Rule</span> <b>HAve FUN!</b> </li>
+                                    <h6 class="my-0"><b>Game Of Codes</b></h6> <small class="text-muted">Coding Challenge</small></div>
+                                     <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                <div>
+                                  <h6 class="my-0"><b>BugVilla</b></h6> <small class="text-muted">A Bug Hunting Challenge</small></div>
+                                    <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>LAN Multiplayer Gaming</b></h6> <small class="text-muted">A Multiplayer Gaming Competition</small></div>
+                                    <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Website DESIGN</b></h6> <small class="text-muted">Design A 'Website' Challenge</small></div>
+                                      <span class="text-muted">100 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Workshop Session</b></h6> <small class="text-muted">Attend A Workshop</small></div>
+                                      <span class="text-muted"> -- </span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Feel The Beat</b></h6> <small class="text-muted">A Dance Competition (SOLO)</small><br>
+                                      <small class="text-muted">A Dance Competition (GROUP)</small></div><small class="text-muted"><br>100 Rs <br>500 Rs</small> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Ember</b></h6> <small class="text-muted">The Fashion Show</small></div>
+                                      <span class="text-muted">200 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Sargam</b></h6> <small class="text-muted">The Singing Competition</small></div>
+                                      <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Pixels</b></h6> <small class="text-muted">Online Photography Challenge</small></div>
+                                      <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>TekTion</b></h6> <small class="text-muted">Movie-Making Challenge</small></div>
+                                      <span class="text-muted">80 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>TPL</b></h6> <small class="text-muted">Cricket Tournament</small></div>
+                                      <span class="text-muted">250 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Treasure Hunt</b></h6> <small class="text-muted">The Hunt Begins</small></div>
+                                      <span class="text-muted">200 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Couch Potato</b></h6> <small class="text-muted">Couch Potato</small></div>
+                                      <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Nukkad Naatak</b></h6> <small class="text-muted">Nukkad Naatak</small></div>
+                                      <span class="text-muted">500 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Face Painting</b></h6> <small class="text-muted">Face Painting</small></div>
+                                      <span class="text-muted">50 Rs</span> </li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                  <div>
+                                    <h6 class="my-0"><b>Chess Mate</b></h6> <small class="text-muted">An Ultimate Chess Battle Royale</small></div>
+                                      <span class="text-muted">50 Rs</span> </li>
                               </ul>
                             </div>
                         </div>
