--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -302,8 +302,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                     <span class="text-muted">50 Rs</span> </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
-                                    <h6 class="my-0"><b>LAN Multiplayer Gaming</b></h6> <small class="text-muted">A Multiplayer Gaming Competition</small></div>
-                                    <span class="text-muted">50 Rs</span> </li>
+                                    <h6 class="my-0"><b>LAN Multiplayer Gaming</b></h6> <small class="text-muted">Mobile [Mini Militia]</small>
+                                    <br><small class="text-muted">PC [Counter Strike]</small> </div>
+                                    <small class="text-muted"><br>50 Rs <br>50 Rs</small> </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
                                     <h6 class="my-0"><b>Website DESIGN</b></h6> <small class="text-muted">Design A 'Website' Challenge</small></div>
@@ -339,7 +340,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
                                     <h6 class="my-0"><b>Treasure Hunt</b></h6> <small class="text-muted">The Hunt Begins</small></div>
-                                      <span class="text-muted">200 Rs</span> </li>
+                                      <span class="text-muted">4x50 Rs = 200 Rs</span> </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
                                     <h6 class="my-0"><b>Couch Potato</b></h6> <small class="text-muted">Couch Potato</small></div>
