Seperate LAN Gaming: Mobile, PC

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -176,25 +176,25 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                     <h4 class="modal-title">Select Events</h4>
                                                     </div>
                                                     <div class="modal-body">
-                                                            <label for="Quizical"><input type="checkbox" class="event_checks" value=50 name="Quizical"/>QUIZICAL</label><br>
-                                                            <label for="GAME OF CODING"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING"/>GAME OF CODING</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING"/>LAN MULTIPLAYER GAMING</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="BUGVILLA BUG-HUNTING"/>BUGVILLA BUG-HUNTING</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=100 name="WEBSITE DESIGN"/>WEBSITE DESIGN</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS"/>WORKSHOP SESSIONS</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=100 name="FEEL THE BEAT-DANCE COMPETITION (SOLO)"/>FEEL THE BEAT-DANCE COMPETITION (SOLO)</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=500 name="FEEL THE BEAT-DANCE COMPETITION (GROUP)"/>FEEL THE BEAT-DANCE COMPETITION (GROUP)</label><br>
-                                                        <!--<label><input type="checkbox" class="event_checks" value=50 name="SCHOOL OF ROCK - BATTLE OF BANDS"/>SCHOOL OF ROCK - BATTLE OF BANDS</label><br> -->
-                                                            <label><input type="checkbox" class="event_checks" value=200 name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=80 name="TEKTION-THE MOVIEMAKING COMPETITION"/>TEKTION-THE MOVIEMAKING COMPETITION</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=250 name="TPL-CRICKET TOURNAMENT"/>TPL-CRICKET TOURNAMENT</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=200 name="TREASURE HUNT"/>TREASURE HUNT</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="COUCH-POTATO"/>COUCH-POTATO</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=500 name="NUKKAD NAATAK"/>NUKKAD NAATAK</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="FACE PAINTING"/>FACE PAINTING</label><br>
-                                                            <label><input type="checkbox" class="event_checks" value=50 name="CHESSMATE"/>CHESSMATE</label><br>               
+                                                            <label for="Quizical"><input type="checkbox" class="event_checks" value=50 name="Quizical" id="Quizical"/>QUIZICAL</label><br>
+                                                            <label for="GAME OF CODING"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING" id="GAME OF CODING"/>GAME OF CODING</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (PC)"/>LAN MULTIPLAYER GAMING - PC</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (MOBILE)"/>LAN MULTIPLAYER GAMING - MOBILE</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="BUGVILLA BUG-HUNTING"/>BUGVILLA BUG-HUNTING</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=100 name="WEBSITE DESIGN"/>WEBSITE DESIGN</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS"/>WORKSHOP SESSIONS</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=100 name="FEEL THE BEAT-DANCE COMPETITION (SOLO)"/>FEEL THE BEAT-DANCE COMPETITION (SOLO)</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=500 name="FEEL THE BEAT-DANCE COMPETITION (GROUP)"/>FEEL THE BEAT-DANCE COMPETITION (GROUP)</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=200 name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=80 name="TEKTION-THE MOVIEMAKING COMPETITION"/>TEKTION-THE MOVIEMAKING COMPETITION</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=250 name="TPL-CRICKET TOURNAMENT"/>TPL-CRICKET TOURNAMENT</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=200 name="TREASURE HUNT"/>TREASURE HUNT</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="COUCH-POTATO"/>COUCH-POTATO</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=500 name="NUKKAD NAATAK"/>NUKKAD NAATAK</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="FACE PAINTING"/>FACE PAINTING</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="CHESSMATE"/>CHESSMATE</label><br>               
                                                     </div>
                                                     <div class="modal-footer">
                                                     <button type="button" name="button" class="btn btn-default" onclick="javascript:selectEvents();" data-dismiss="modal">Save</button>
